--- a/Material App/app/src/main/res/values/colors.xml
+++ b/Material App/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+  <color name="primaryColor">#ffc517</color>
+  <color name="primaryLightColor">#fff857</color>
+  <color name="primaryDarkColor">#c79500</color>
+  <color name="primaryTextColor">#000000</color>
 </resources>
