--- a/Material App/app/src/main/res/values/styles.xml
+++ b/Material App/app/src/main/res/values/styles.xml
@@ -1,11 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+        <item name="colorOnPrimary">@color/primaryTextColor</item>
+        <item name="textAppearanceHeadline5">@style/CustomHeadline5</item>
+    </style>
+
+    <style name="CustomHeadline5" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textSize">30sp</item>
     </style>
 
 </resources>
